# everest-tutorials

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/scripts/: pack.sh  upload.sh
.github/workflows/: commitlint.yml  publish.yml  release-please.yml  release.yml  style.yml
ci/: testkomodo.sh
data/egg/: COPYING.md  README.md
data/egg/everest/model/: egg.yml
data/egg/flow/include/: ACTIVE.INC
data/egg/flow/model/: EGG_MODEL_FLOW.DATA  SCHEDULE_TEMPLATE.SCH
data/scripts/: plot_controls.py  plot_objectives.py  plot_production.py
docs/source/: conf.py  download_links.txt  index.rst
docs/source/control_sensitivities/: control_sensitivities.rst
docs/source/development/: changelog.rst  contributors_guide.rst
docs/source/download_material/: download_material.rst
docs/source/model_description/: drogon_description.rst
docs/source/multi_objective/: well_rate_multi_objective.rst
docs/source/other_topics/: visualization.rst
docs/source/well_order/: well_order.rst
docs/source/well_rate/: well_rate.rst  well_rate_multi_objective.rst
docs/source/well_selection/: well_selection.rst
docs/source/well_swap/: well_swap.rst
docs/source/well_trajectory/: well_trajectory.rst
src/everest_tutorials/: __init__.py
tests/: conftest.py  helper_methods.py  test_well_rate.py
tests/drogon/: test_control_sensitivities.py  test_well_order.py  test_well_rate.py  test_well_selection.py  test_well_swap.py  test_well_trajectory.py
tests/egg/: test_egg.py
(+133 files in other folders)
