[project]
name = "everest_tutorials"
version = "0.7.0"
description = "EVEREST tutorials"
authors = [{ name = "Equinor ASA", email = "fg_sib-scout@equinor.com" }]
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.11"
dependencies = [
    "furo>=2024.8.6",
    "mypy>=1.15.0",
    "pytest",
    "pytest-snapshot",
    "pytest-timeout",
    "sphinx>=8.2.3",
    "sphinx-mdinclude>=0.6.2",
    "types-setuptools>=76.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
